--- a/package.json
+++ b/package.json
@@ -4,5 +4,23 @@
   "main": "index.js",
   "repository": "git@github.com:esayler/byob.git",
   "author": "Eric Sayler <easayler@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "NODE_ENV=development nodemon server/index.js --ignore public/",
+    "test": "mocha"
+  },
+  "devDependencies": {
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "morgan": "^1.8.1",
+    "nodemon": "^1.11.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3"
+  }
 }
