--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
     "test": "mocha"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^3.4.1",
     "morgan": "^1.8.1",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "global": "^4.3.2",
+    "knex": "^0.13.0",
+    "pg": "^6.2.2"
   }
 }
