--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "chalk": "^1.1.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "global": "^4.3.2",
