--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "chalk": "^1.1.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-validator": "^3.2.0",
     "global": "^4.3.2",
     "knex": "^0.13.0",
+    "lodash": "^4.17.4",
     "pg": "^6.2.2"
   }
 }
