--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=development nodemon server/index.js --ignore public/",
-    "test": "mocha",
+    "test": "mocha test/**.js",
     "lint": "eslint ."
   },
   "devDependencies": {
@@ -32,6 +32,7 @@
     "express": "^4.15.3",
     "express-validator": "^3.2.0",
     "global": "^4.3.2",
+    "jsonapi-serializer": "^3.5.3",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "pg": "^6.2.2"
