--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^3.2.0",
     "global": "^4.3.2",
     "jsonapi-serializer": "^3.5.3",
+    "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "pg": "^6.2.2"
